2006-05-22  Marko Anastasov <marko@marko.anastasov.name>

        * gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
        * gtk/src/gtk_signals.defs: Added paginate signal for PrintOperation.
        * gtk/src/printer.hg: Ignore gtk_printer_compare.
        * gtk/src/printjob.hg: Added set/get_track_print_status().
        * gtk/src/printoperation.hg: Added set_track_print_status() and cancel()
        methods, paginate signal.

2006-05-19  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: RefPtr appendix: Reword the bit about using 
	an official shared_ptr<>. It would not be that easy.
	* gtk/src/gtk_docs_override.xml: gtk_table_get_homogenous(). Override because 
	gtk_table_get_homogenous() is for some reason not being automatically changed to 
	get_homongenous().

2.9.3:

2006-05-18  Murray Cumming  <murrayc@murrayc.com>

        * gdk/src/pixbufloader.hg: Add _CONVERSION() needed by write(), now that
        glibmm actually does the conversion.
        * gtk/src/editable.hg: Use _VFUNC_H() as we did before the big #ifdef changes.
        There is no need to stop using it, and it keeps the vfunc order the same as before.

2006-05-16  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: update the appendix of the tutorial about
	building with jhbuild

2006-05-16  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/Makefile.am: fix tutorial stylesheet location so that
	locally installed documentation can find the stylesheet.  Now the locally
	installed documentation and the published website documentation both install
	the stylesheet in the same relative location.

2006-05-16  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/pagesetupunixdialog.ccg:
	* gtk/src/pagesetupunixdialog.hg: Changed constructor to make parent be the
	first parameter, and added an overload without it.
	* gtk/src/printjob.hg:
	* gtk/src/printoperation.hg: Fix some property wrappers to take RefPtrs when