@@ -1,4 +1,4 @@
-# Doxyfile 1.3.9.1
+# Doxyfile 1.4.6
 
 #---------------------------------------------------------------------------
 # Project related configuration options
@@ -32,15 +32,17 @@ JAVADOC_AUTOBRIEF      = YES
 MULTILINE_CPP_IS_BRIEF = NO
 DETAILS_AT_TOP         = YES
 INHERIT_DOCS           = YES
-DISTRIBUTE_GROUP_DOC   = NO
+SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 8
-ALIASES                = "newin2p2=\xrefitem newin2p2s \"Since gtkmm 2.2\" \"New API in gtkmm 2.2\" "\n"" 
-ALIASES                += "newin2p4=\xrefitem newin2p4s \"Since gtkmm 2.4\" \"New API in gtkmm 2.4\" "\n""
-ALIASES                += "newin2p6=\xrefitem newin2p6s \"Since gtkmm 2.6\" \"New API in gtkmm 2.6\" "\n""
-ALIASES                += "newin2p8=\xrefitem newin2p8s \"Since gtkmm 2.8\" \"New API in gtkmm 2.8\" "\n""
-ALIASES                += "newin2p10=\xrefitem newin2p10s \"Since gtkmm 2.10\" \"New API in gtkmm 2.10\" "\n""
+ALIASES                = "newin2p2=\xrefitem newin2p2s \"Since gtkmm 2.2\" \"New API in gtkmm 2.2\" \n" \
+                         "newin2p4=\xrefitem newin2p4s \"Since gtkmm 2.4\" \"New API in gtkmm 2.4\" \n" \
+                         "newin2p6=\xrefitem newin2p6s \"Since gtkmm 2.6\" \"New API in gtkmm 2.6\" \n" \
+                         "newin2p8=\xrefitem newin2p8s \"Since gtkmm 2.8\" \"New API in gtkmm 2.8\" \n" \
+                         "newin2p10=\xrefitem newin2p10s \"Since gtkmm 2.10\" \"New API in gtkmm 2.10\" \n"
 OPTIMIZE_OUTPUT_FOR_C  = NO
 OPTIMIZE_OUTPUT_JAVA   = NO
+BUILTIN_STL_SUPPORT    = NO
+DISTRIBUTE_GROUP_DOC   = NO
 SUBGROUPING            = YES
 #---------------------------------------------------------------------------
 # Build related configuration options
@@ -70,6 +72,7 @@ ENABLED_SECTIONS       =
 MAX_INITIALIZER_LINES  = 30
 SHOW_USED_FILES        = YES
 SHOW_DIRECTORIES       = YES
+FILE_VERSION_FILTER    = 
 #---------------------------------------------------------------------------
 # configuration options related to warning and progress messages
 #---------------------------------------------------------------------------
@@ -77,6 +80,7 @@ QUIET                  = NO
 WARNINGS               = YES
 WARN_IF_UNDOCUMENTED   = YES
 WARN_IF_DOC_ERROR      = YES
+WARN_NO_PARAMDOC       = NO
 WARN_FORMAT            = "$file:$line: $text"
 WARN_LOGFILE           = 
 #---------------------------------------------------------------------------
@@ -104,6 +108,7 @@ INLINE_SOURCES         = NO
 STRIP_CODE_COMMENTS    = NO
 REFERENCED_BY_RELATION = YES
 REFERENCES_RELATION    = YES
+USE_HTAGS              = NO
 VERBATIM_HEADERS       = NO
 #---------------------------------------------------------------------------
 # configuration options related to the alphabetical class index
@@ -192,7 +197,10 @@ INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  = 
 PREDEFINED             = DOXYGEN_SHOULD_SKIP_THIS \
                          GTKMM_USING_STD(x)= \
-                         GTKMM_API
+                         GTKMM_API \
+                         GLIBMM_VFUNCS_ENABLED \
+                         GLIBMM_PROPERTIES_ENABLED \
+                         GLIBMM_EXCEPTIONS_ENABLED
 EXPAND_AS_DEFINED      = 
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
@@ -211,18 +219,22 @@ HIDE_UNDOC_RELATIONS   = NO
 HAVE_DOT               = YES
 CLASS_GRAPH            = YES
 COLLABORATION_GRAPH    = NO
+GROUP_GRAPHS           = YES
 UML_LOOK               = NO
 TEMPLATE_RELATIONS     = NO
 INCLUDE_GRAPH          = NO
 INCLUDED_BY_GRAPH      = NO
 CALL_GRAPH             = NO
 GRAPHICAL_HIERARCHY    = YES
+DIRECTORY_GRAPH        = YES
 DOT_IMAGE_FORMAT       = png
 DOT_PATH               = 
 DOTFILE_DIRS           = 
 MAX_DOT_GRAPH_WIDTH    = 1024
 MAX_DOT_GRAPH_HEIGHT   = 1024
 MAX_DOT_GRAPH_DEPTH    = 0
+DOT_TRANSPARENT        = NO
+DOT_MULTI_TARGETS      = NO
 GENERATE_LEGEND        = YES
 DOT_CLEANUP            = YES
 #---------------------------------------------------------------------------
