@@ -1,0 +1,6 @@
+style "example-style"
+{
+  examplescale = 10
+}
+
+class "gtkmm__CustomObject_mywidget" style "example-style"
