@@ -1,3 +1,14 @@
+2006-05-26  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/reference/Doxyfile.in: In PREDEFINED, set 
+	GLIBMM_VFUNCS_ENABLED, GLIBMM_PROPERTIES_ENABLED, and 
+        GLIBMM_EXCEPTIONS_ENABLED so that those parts of the API 
+	show up in the documentation.
+	* examples/book/custom/custom_widget/custom_gtkrc:
+	* examples/book/custom/custom_widget/mywidget.cc:
+	Attempt (so far unsuccessfully) to show how to make an 
+	aspect of a custom widget themable.
+
 2006-05-22  Marko Anastasov <marko@marko.anastasov.name>
 
         * gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
